// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi-select renders correctly 1`] = `
<div
  class="cloud-select"
>
  <div
    class="cloud-select-wrapper empty default"
  >
    <span
      class="cloud-select-selected"
      title=""
    >
      请选择
    </span>
    <i
      class="cloud-select-select-icon cloud-select-clear-icon cloud-icon icon-close-fill-1"
    />
    <i
      class="cloud-select-select-icon close cloud-icon icon-down"
    />
  </div>
</div>
`;

exports[`multi-select renders custom option correctly 1`] = `
<div
  class="cloud-select"
>
  <div
    class="cloud-select-wrapper default"
  >
    <span
      class="cloud-select-selected"
      title=""
    >
      草莓
    </span>
    <i
      class="cloud-select-select-icon cloud-select-clear-icon cloud-icon icon-close-fill-1"
    />
    <i
      class="cloud-select-select-icon close cloud-icon icon-down"
    />
  </div>
</div>
`;
